# tango

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
src/: lib.rs  main.rs  md2rs.rs  rs2md.rs  timestamp.rs
src/testing/: footnote_snippets.rs  mod.rs  test_snippets.rs
src/tests/: mod.rs  test_snippets.rs
tests/: runner.rs
